--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=assignmant
+spring.datasource.url=jdbc:postgresql://localhost:5432/assignment
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.hikari.pool-name=HikariCP
+spring.datasource.hikari.maximum-pool-size=10
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.profiles.active=dev
+spring.devtools.restart.enabled=false
+#logging.level.org.springframework=DEBUG
+#logging.level.com.assignment=DEBUG
+logging.level.org.springframework.boot.devtools=DEBUG
